_docs/v0.63/embedding/sdk/api/snippets/CollectionBrowserProps.md
---
version: v0.63
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: CollectionBrowserProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/CollectionBrowserProps.md'
layout: new-docs
---

**`Expand`**

## Properties

<!-- [<snippet properties>] -->

| Property                                                      | Type                                                                                                                                                         | Description                                                                                                                                                                                                                                                                                                                                                                       |
| :------------------------------------------------------------ | :----------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| <a id="classname"></a> `className?`                           | `string`                                                                                                                                                     | A custom class name to be added to the root element.                                                                                                                                                                                                                                                                                                                              |
| <a id="collectionid"></a> `collectionId?`                     | [`SdkCollectionId`](./api/SdkCollectionId)                                                                                                                | The numerical ID of the collection, "personal" for the user's personal collection, "tenant" for the user's tenant collection, or "root" for the root collection. You can find this ID in the URL when accessing a collection in your Metabase instance. For example, the collection ID in `http://localhost:3000/collection/1-my-collection` would be `1`. Defaults to "personal" |
| <a id="emptycontentcomponent"></a> `EmptyContentComponent?`   | \| [`ComponentType`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L104) \| `null` | A component to display when there are no items in the collection.                                                                                                                                                                                                                                                                                                                 |
| <a id="onclick"></a> `onClick?`                               | (`item`: [`MetabaseCollectionItem`](./api/MetabaseCollectionItem)) => `void`                                                                              | A function to call when an item is clicked.                                                                                                                                                                                                                                                                                                                                       |
| <a id="pagesize"></a> `pageSize?`                             | `number`                                                                                                                                                     | The number of items to display per page. The default is 25.                                                                                                                                                                                                                                                                                                                       |
| <a id="showdashboardquestions"></a> `showDashboardQuestions?` | `boolean`                                                                                                                                                    | Whether to show questions that belong to a dashboard alongside collection saved questions. Set to false to hide them and keep the list focused on collection content, matching the core Metabase app. Defaults to true.                                                                                                                                                           |
| <a id="style"></a> `style?`                                   | [`CSSProperties`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L2579)             | A custom style object to be added to the root element.                                                                                                                                                                                                                                                                                                                            |
| <a id="visiblecolumns"></a> `visibleColumns?`                 | [`CollectionBrowserListColumns`](./api/CollectionBrowserListColumns)[]                                                                                    | The columns to display in the collection items table. If not provided, all columns will be shown.                                                                                                                                                                                                                                                                                 |
| <a id="visibleentitytypes"></a> `visibleEntityTypes?`         | (`"collection"` \| `"dashboard"` \| `"question"` \| `"model"`)[]                                                                                             | The types of entities that should be visible. If not provided, all entities will be shown.                                                                                                                                                                                                                                                                                        |

<!-- [<endsnippet properties>] -->
